QUARTZ.NET CHANGELOG
==============================
http://www.quartz-scheduler.net

Release 3.0 alpha, xxx xx 2016
--------------------------------

NEW FEATURE

* Task based jobs with async/await support
* Support .NET Core

BREAKING CHANGES

* .NET 4.5.2 required
* Many scheduler methods have been changed to be Task based, remember to await them
* IJob interface now returns a task
* Some IList properties have been changed to IReadOnlyList to properly reflect intent


Release 2.3.3, Jul 9, 2015
--------------------------------

This is a minor release containing mostly bug fixes.

NEW FEATURE

* Support generic job types with AdoJobStore

FIXES

* AdoJobStore doesn't notify about removing orphaned job
* Store null JobData in JobDetails if it's empty
* Documentation error in SimpleTriggerImpl UpdateAfterMisfire
* Ensure IDriverDelegate members in StdAdoDelegate are virtual

Release 2.3.2, Mar 30, 2015
--------------------------------

This is a minor release containing mostly bug fixes.

NEW FEATURE

* Add mysql 6.9.5 provider support 

FIXES

* Avoid unnecessary object allocations in CronExpression
* CalendarIntervalTrigger and DailyTimeIntervalTrigger produce incorrect schedule builders
* Incorrect multiplication factor in DailyTimeIntervalScheduleBuilder.EndingDailyAfterCount()
* AnnualCalendar SetDayExcluded does not update internal data structures if base calendar excludes date
* Ensure IDriverDelegate members in StdAdoDelegate are virtual
* Several XML documentation spelling error fixes

Release 2.3.1, Jan 15, 2015
--------------------------------

This is a bug fix release with upgraded Common.Logging dependency, also problems running
under .NET 4.0 should now be finally fixed.

NEW FEATURE

* Upgrade to Common.Logging 3.0.0

FIXES

* JobDetailImpl members should be virtual
* Triggers do not transition to error state in AdoJobStore when job retrieval fails during trigger acquisition
* Quartz.Server.exe.config refers to wrong Common.Logging.Log4Net assembly